--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TextUtils is a utility which can b used to manipulate your text in the way you want."
+      content="TextUtils is a utility which can be used to manipulate your text in the way you want.You can remove extra space, copy the manipulated text as well as convert your text frim Uppercase to Lowercase and lowercase to uppercase"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
@@ -16,7 +16,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    <title>Textutils -Home</title>
+    <title>Textutils -Word counter | Character counter | lowercase to uppercase | uppercase to lowercase</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
